--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==2.8
 itsdangerous==1.1.0
 jdcal==1.4
 Jinja2==2.10.1
+jsonschema==2.6.0
 MarkupSafe==1.1.1
 numpy==1.16.2
 openpyxl==2.5.0
@@ -19,10 +20,10 @@ PyMySQL==0.9.3
 python-dateutil==2.8.0
 pytz==2019.1
 requests==2.21.0
+scikit-learn==0.19.0
+scipy==1.2.1
+simplejson==3.16.0
 six==1.12.0
 SQLAlchemy==1.3.2
 urllib3==1.24.1
 Werkzeug==0.15.2
-scikit-learn==0.19.0
-jsonschema==2.6.0
-simplejson==3.16.0
